fixed deck scrollbars to appear only when needed

--- a/client/src/app/deck/layout/deck-main.module.scss
+++ b/client/src/app/deck/layout/deck-main.module.scss
@@ -28,6 +28,6 @@
 	display: flex;
 	flex-direction: column;
 	flex: 0 1 auto;
-	overflow-y: scroll;
+	overflow-y: auto;
 	padding: 1rem;
 }
