--- a/client/src/app/deck/layout/deck-sidebar.module.scss
+++ b/client/src/app/deck/layout/deck-sidebar.module.scss
@@ -6,7 +6,7 @@
 
 .body {
 	flex-grow: 1;
-	overflow-y: scroll;
+	overflow-y: auto;
 }
 
 .header {
